Envoy/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9902

static_resources:

  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              
              routes:
                - match:
                    prefix: "/api/v1/auth/login"
                  route:
                    prefix_rewrite: /api/v1/auth/login
                    cluster: AuthenticationService
                    request_mirror_policies:
                      - cluster: MetricsService
                        runtime_fraction:
                          default_value:
                            numerator: 100
                            denominator: HUNDRED
                        
                - match:
                    prefix: "/api/v1/auth/register"
                  route:
                    prefix_rewrite: /api/v1/auth/register
                    cluster: AuthenticationService
                    request_mirror_policies:
                      - cluster: MetricsService
                        runtime_fraction:
                          default_value:
                            numerator: 100
                            denominator: HUNDRED
                        
                - match:
                    prefix: "/api/v1/auth/pingauth"
                  route:
                    prefix_rewrite: /api/v1/auth/pingauth
                    cluster: AuthenticationService
                    request_mirror_policies:
                      - cluster: MetricsService
                        runtime_fraction:
                          default_value:
                            numerator: 100
                            denominator: HUNDRED
                        
                - match:
                    prefix: "/api/v1/user/get"
                  route:
                    prefix_rewrite: /api/v1/user/get
                    cluster: UserService
                    request_mirror_policies:
                      - cluster: MetricsService
                        runtime_fraction:
                          default_value:
                            numerator: 100
                            denominator: HUNDRED

                - match:
                    prefix: "/api/v1/user/edit"
                  route:
                    prefix_rewrite: /api/v1/user/edit
                    cluster: UserService
                    request_mirror_policies:
                      - cluster: MetricsService
                        runtime_fraction:
                          default_value:
                            numerator: 100
                            denominator: HUNDRED

                - match:
                    prefix: "/api/v1/user/delete"
                  route:
                    prefix_rewrite: /api/v1/user/delete
                    cluster: UserService
                    request_mirror_policies:
                      - cluster: MetricsService
                        runtime_fraction:
                          default_value:
                            numerator: 100
                            denominator: HUNDRED
                        

                - match:
                    prefix: "/api/v1/user/delete"
                  route:
                    prefix_rewrite: /api/v1/user/delete
                    cluster: UserService
                    request_mirror_policies:
                      - cluster: MetricsService
                        runtime_fraction:
                          default_value:
                            numerator: 100
                            denominator: HUNDRED
                        

                - match:
                    prefix: "/api/v1/apikey/get"
                  route:
                    prefix_rewrite: /api/v1/apikey/list
                    cluster: ApiKeyService
                    request_mirror_policies:
                      - cluster: MetricsService
                        runtime_fraction:
                          default_value:
                            numerator: 100
                            denominator: HUNDRED
                        

                - match:
                    prefix: "/api/v1/apikey/list"
                  route:
                    prefix_rewrite: /api/v1/apikey/list
                    cluster: ApiKeyService
                    request_mirror_policies:
                      - cluster: MetricsService
                        runtime_fraction:
                          default_value:
                            numerator: 100
                            denominator: HUNDRED

                - match:
                    prefix: "/api/v1/apikey/add"
                  route:
                    prefix_rewrite: /api/v1/apikey/add
                    cluster: ApiKeyService
                    request_mirror_policies:
                      - cluster: MetricsService
                        runtime_fraction:
                          default_value:
                            numerator: 100
                            denominator: HUNDRED

                - match:
                    prefix: "/api/v1/apikey/edit"
                  route:
                    prefix_rewrite: /api/v1/apikey/edit
                    cluster: ApiKeyService
                    request_mirror_policies:
                      - cluster: MetricsService
                        runtime_fraction:
                          default_value:
                            numerator: 100
                            denominator: HUNDRED

                - match:
                    prefix: "/api/v1/apikey/delete"
                  route:
                    prefix_rewrite: /api/v1/apikey/delete
                    cluster: ApiKeyService
                    request_mirror_policies:
                      - cluster: MetricsService
                        runtime_fraction:
                          default_value:
                            numerator: 100
                            denominator: HUNDRED

                - match:
                    prefix: "/api/v1/upload"
                  route:
                    prefix_rewrite: /api/v1/upload
                    cluster: UploadService
                    request_mirror_policies:
                      - cluster: MetricsService
                        runtime_fraction:
                          default_value:
                            numerator: 100
                            denominator: HUNDRED

                - match:
                    prefix: "/api/v1/collection/list"
                  route:
                    prefix_rewrite: "/api/v1/collection/list"
                    cluster: ImageService
                    request_mirror_policies:
                      - cluster: MetricsService
                        runtime_fraction:
                          default_value:
                            numerator: 100
                            denominator: HUNDRED

                - match:
                    prefix: "/api/v1/collection/create"
                  route:
                    prefix_rewrite: "/api/v1/collection/create"
                    cluster: ImageService
                    request_mirror_policies:
                      - cluster: MetricsService
                        runtime_fraction:
                          default_value:
                            numerator: 100
                            denominator: HUNDRED

                - match:
                    prefix: "/api/v1/collection/edit"
                  route:
                    prefix_rewrite: "/api/v1/collection/edit"
                    cluster: ImageService
                    request_mirror_policies:
                      - cluster: MetricsService
                        runtime_fraction:
                          default_value:
                            numerator: 100
                            denominator: HUNDRED

                - match:
                    prefix: "/api/v1/collection/delete"
                  route:
                    prefix_rewrite: "/api/v1/collection/delete"
                    cluster: ImageService
                    request_mirror_policies:
                      - cluster: MetricsService
                        runtime_fraction:
                          default_value:
                            numerator: 100
                            denominator: HUNDRED

                - match:
                    prefix: "/api/v1/image/get"
                  route:
                    prefix_rewrite: "/api/v1/image/get"
                    cluster: ImageService
                    request_mirror_policies:
                      - cluster: MetricsService
                        runtime_fraction:
                          default_value:
                            numerator: 100
                            denominator: HUNDRED

                - match:
                    prefix: "/api/v1/image/get/paged"
                  route:
                    prefix_rewrite: "/api/v1/image/get/paged"
                    cluster: ImageService
                    request_mirror_policies:
                      - cluster: MetricsService
                        runtime_fraction:
                          default_value:
                            numerator: 100
                            denominator: HUNDRED

                - match:
                    prefix: "/api/v1/image/get/all"
                  route:
                    prefix_rewrite: "/api/v1/image/get/all"
                    cluster: ImageService
                    request_mirror_policies:
                      - cluster: MetricsService
                        runtime_fraction:
                          default_value:
                            numerator: 100
                            denominator: HUNDRED

                - match:
                    prefix: "/api/v1/image/edit"
                  route:
                    prefix_rewrite: "/api/v1/image/edit"
                    cluster: ImageService
                    request_mirror_policies:
                      - cluster: MetricsService
                        runtime_fraction:
                          default_value:
                            numerator: 100
                            denominator: HUNDRED
                - match:
                    prefix: "/api/v1/image/delete"
                  route:
                    prefix_rewrite: "/api/v1/image/delete"
                    cluster: ImageService
                    request_mirror_policies:
                      - cluster: MetricsService
                        runtime_fraction:
                          default_value:
                            numerator: 100
                            denominator: HUNDRED


                - match:
                    prefix: "/api/v1/metrics/get"
                  route:
                    prefix_rewrite: "/api/v1/metrics/get"
                    cluster: MetricsService
                    request_mirror_policies:
                      - cluster: MetricsService
                        runtime_fraction:
                          default_value:
                            numerator: 100
                            denominator: HUNDRED
                - match:
                    prefix: "/api/v1/metrics/daily/get"
                  route:
                    prefix_rewrite: "/api/v1/metrics/daily/get"
                    cluster: MetricsService
                    request_mirror_policies:
                      - cluster: MetricsService
                        runtime_fraction:
                          default_value:
                            numerator: 100
                            denominator: HUNDRED
                - match:
                    prefix: "/api/v1/logs/apikey/get"
                  route:
                    prefix_rewrite: "/api/v1/logs/apikey/get"
                    cluster: MetricsService
           
                
  clusters:
  - name: AuthenticationService
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: AuthenticationService
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: imagevault.authenticationservice
                port_value: 2101
  - name: UserService
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: UserService
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: imagevault.userservice
                port_value: 2104
  - name: ImageService
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: ImageService
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: imagevault.imageservice
                port_value: 2111
  
  - name: UploadService
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: UploadService
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: imagevault.uploadservice
                port_value: 2110
  - name: MetricsService
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: MetricsService
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: imagevault.requestmetricsservice
                port_value: 2106
  - name: ApiKeyService
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: ApiKeyService
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: imagevault.apikeyservice
                port_value: 2108
